--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1 - Consola</title>
+    <title>Ejercicio 1</title>
 </head>
 <body>
-    <h1>Ejercicio 1</h1>
-    <p>Abre la consola del navegador para ver el mensaje.</p>
+    <p id="miParrafo"></p>
+    <button onclick="actualizarTexto()">Haz clic aquí</button>
 
     <script>
-        // Mensaje que se imprime en la consola al cargar la página
-        console.log("¡Hola! Este es un mensaje desde la consola.");
+        function actualizarTexto() {
+            document.getElementById("miParrafo").innerHTML = "¡Texto actualizado con Javascript!";
+        }
     </script>
 </body>
 </html>
